@@ -4,6 +4,9 @@ Products.CMFCore Changelog
 2.2.8 (unreleased)
 ------------------
 
+- support unset portal_skins request variables in HTTP headers
+  (see https://dev.plone.org/ticket/10071)
+  [fRiSi]
 
 2.2.7 (2012-08-30)
 ------------------
